# ConformableMechanism

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
ConformableMechanism/: CMakeLists.txt
ConformableMechanism/3rd/: CMakeLists.txt
ConformableMechanism/3rd/hpp-fcl/: CMakeLists.txt
ConformableMechanism/3rd/hpp-fcl/cmake/: package-config.cmake  uninstall.cmake
ConformableMechanism/3rd/hpp-fcl/include/hpp/fcl/: config.hh
ConformableMechanism/3rd/hpp-fcl/include/hpp/fcl/math/: transform.h
ConformableMechanism/3rd/hpp-fcl/src/: CMakeLists.txt
ConformableMechanism/3rd/pagmo2/: CMakeLists.txt
ConformableMechanism/3rd/pagmo2/include/pagmo/: exceptions.hpp
ConformableMechanism/3rd/pagmo2/include/pagmo/algorithms/: nsga3.hpp
ConformableMechanism/3rd/pagmo2/include/pagmo/utils/: multi_objective.hpp
ConformableMechanism/3rd/tbb/: CMakeLists.txt
ConformableMechanism/3rd/tbb/src/tbb/: tbb_misc.cpp  tbb_version.h
ConformableMechanism/Config/: DesignConfig.ini  EditorLayout.config
ConformableMechanism/Source/: ExperimentCurves.h  ExperimentSurfaces.h
ConformableMechanism/Source/Example/: LightEnv.h  MotionGenerationExperiment.h  PathGenerationExperiment.h
ConformableMechanism/Source/LinkageOptimize/: EffectorLinkageProblem.cpp  EffectorLinkageProblem.h  Fcl.h  SurfaceLinkageProblem.cpp  SurfaceLinkageProblem.h  SurfaceVoxel.cpp  SurfaceVoxel.h
ConformableMechanism/Source/Materials/: OrientedSurfaceMaterial.h
ConformableMechanism/Source/MeshFitting/: FKProblem.cpp  FKProblem.h  InitJointFromParameter.h  MeshFittingDesigner.cpp  MeshFittingDesigner.h  MeshFittingUI.cpp  MeshFittingUI.h  PostProcess.cpp  ShowConfig.h  TargetPointsActor.h
ConformableMechanism/Source/Optimization/: EffectorProblem.h  JointParameterDefine.h  LinkageGeometryProblem.cpp  LinkageGeometryProblem.h  MainProblem.cpp  MainProblem.h  MechanismMobility.h  MechanismSequence.h  MobilityProblem.h  ReferenceSurface.h
ConformableMechanism/Source/Solver/: RandomValidX.h
ConformableMechanism/Source/SpacialMechanism/: ClosedChainMechSolver.cpp  ClosedChainMechSolver.h  ProbabilityTest.h  SpacialLinkageDesign.cpp  SpacialLinkageDesign.h  SurfaceJoint.cpp  SurfaceJoint.h  SurfaceJointComponent.cpp  SurfaceJointComponent.h  SurfaceLinkage.h
Engine/: README.md
Engine/Config/: EngineConfig.ini
